--- a/exercise_1/Makefile
+++ b/exercise_1/Makefile
@@ -9,7 +9,7 @@ OBJECTS = main.o $(OBJDIR)/evolution_parallel.o $(OBJDIR)/read_write_pgm_image.o
 gol.x: $(OBJECTS)
 	$(CC) $(OBJECTS) -o $@
 main.o: main.c
-	$(CC) $(CFLAGS) main.c
+	$(CC) $(CFLAGS) main.c -o $@
 $(OBJDIR)/%.o: src/%.c
 	$(CC) $(CFLAGS) $^ -o $@
 clean:
