--- a/exercise_1/Makefile
+++ b/exercise_1/Makefile
@@ -3,7 +3,7 @@ CC = mpicc
 INCDIR = include
 OBJDIR = obj
 # CFLAGS contains options passed to the compiler
-CFLAGS = -c -fopenmp -I$(INCDIR)
+CFLAGS = -c -openmp -I$(INCDIR)
 OBJECTS = main.o $(OBJDIR)/evolution_parallel.o $(OBJDIR)/read_write_pgm_image.o $(OBJDIR)/utilities.o
 
 gol.x: $(OBJECTS)
