--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ exercise_1/starts/start_5000px.pgm
 exercise_1/starts/start_5760px.pgm
 exercise_1/starts/start_10000px.pgm
 exercise_1/main.o
+exercise_1/data.csv
